--- a/src/components/atoms/Card.css
+++ b/src/components/atoms/Card.css
@@ -1,3 +1,18 @@
 #card {
-    
+    /* width: 100px; */
+    /* height: 150px; */
+    perspective: 1000px;
+    cursor: pointer;
+    margin: 10px;
+}
+
+#card img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    backface-visibility: hidden;
+}
+
+#card.flipped img {
+    transform: rotateY(180deg);
 }
