--- a/src/components/organisms/Section.css
+++ b/src/components/organisms/Section.css
@@ -6,7 +6,9 @@
     align-items: center;
     margin: 10px auto; /* Centrar el tablero y darle espacio */
     background-color: #a5c9ca;
-    height: 35%;
+    height: auto;
+    padding: 20px;
+    border-radius: 15px;
 }
 
 #board button {
